src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@use '../../../../../../node_modules/@angular/material/index' as mat;
@import '../../../../../styles';
@import '../../../../../sizes';

@include mat.core();
@import '../../../../../theme-fem-readup-red';

.mat-card {
  @media #{$breakpoint-small} {
    box-shadow: unset !important;
    margin-bottom: 64px;
  }
  @media #{$breakpoint-medium} {
  }
  @media #{$breakpoint-large} {
  }
}

.container:hover {
  cursor: pointer;
  transform: scale(1.01);
  opacity: 90%;
  transition: all .25s ease-in-out;
  transition-property: opacity, transform;
}

.event-image {
  max-height: 200px;
  object-fit: cover
}

.event-past {
  .event-image {
    filter: grayscale(100%);
    opacity: 70%;
  }
}

.event-image-label {
  position: absolute;
  margin-left: -20px;
  margin-top: -64px;
  background: white;
  padding: 4px 10px;
  font-weight: 600;

  background: mat.get-color-from-palette(mat.$grey-palette, 50);
}

::ng-deep .fem-readup-red-theme {
  .event-category {
    color: mat.get-color-from-palette($fem-readup-red-primary, 400);
    font-weight: 600;
    margin-bottom: 12px;
  }
}

.event-past {
  .event-category {
    color: mat.get-color-from-palette(mat.$grey-palette, 600);
  }
}

::ng-deep .event .mat-card-actions {
  margin: 0 !important;
}

.card-header {
  min-height: 120px;
}

